# self-healing-agents

./: LICENSE  README.md  SKILL.md  known-fixes.example.json  pyproject.toml
.github/workflows/: ci.yml
demo/: demo-config.yaml  demo-errors.jsonl  demo.sh
references/: error-patterns.md
scripts/: scan-failures.py  self-heal.py
sources/: __init__.py  base.py  jsonl.py  logfile.py  openclaw.py
src/self_healing/: __init__.py  cli.py  healer.py  scanner.py
src/self_healing/sources/: __init__.py  base.py  jsonl.py  logfile.py  openclaw.py
tests/: conftest.py  test_cascades.py  test_cli.py  test_matching.py  test_notifications.py  test_risk.py  test_sources.py
