[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "self-healing-agents"
version = "2.1.0"
description = "Autonomous error detection, diagnosis, and repair for AI agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = ["pyyaml>=5.0"]

[project.scripts]
self-heal = "self_healing.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["self_healing*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
